# trafficpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: argparse.h  color.h  traffic.h
src/: argparse.cpp  color.cpp  main.cpp  traffic.cpp
src/static/: argsconfig.yaml  config.yaml
